--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miecz Kreacji</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <!-- <link rel="stylesheet" href="css/common.css" />-->
   </head>
   <body>
     <ul>
       <!-- <li><a href="nieistnieje.html">tymczasowy nie działający link</a></li> -->
     </ul>
     <input id="font-size-control" type="range" min="16" max="96" />
+    <input id="EnemyHP1" type="range" min="0" max="50" />
+    <input id="HeroHP1" type="range" min="0" max="50" />
     <span id="text">Abracadabra!</span>
 
-    <script src="js/battle.js"></script>
+    <!-- <script src="js/battle.js"></script>  -->
+    <script src="js/Hero.js"></script>
+    
   </body>
 </html>
 
