--- a/index.html
+++ b/index.html
@@ -5,20 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miecz Kreacji</title>
-    <!-- <link rel="stylesheet" href="css/common.css" />-->
+    <link rel="stylesheet" href="css/battle.css" />
   </head>
   <body>
     <ul>
       <!-- <li><a href="nieistnieje.html">tymczasowy nie działający link</a></li> -->
     </ul>
-    <input id="font-size-control" type="range" min="16" max="96" />
-    <input id="EnemyHP1" type="range" min="0" max="50" />
-    <input id="HeroHP1" type="range" min="0" max="50" />
-    <span id="text">Abracadabra!</span>
+    <div class="container">
+    <div class="card">
+      <div class="content">
+      <button id="Start" type="Start">Start</button>
+      <p><span class="txt"> Enemy HP</span></p>
+      <progress id="EnemyHP1" value="0" max="100"></progress>
+      <!-- <input id="EnemyHP1" type="range" min="0" max="50" />-->
+      <p><span class="txt"> Hero HP</span></p>
+      <progress id="HeroHP1" value="0" max="100"></progress>
+      <!-- <input id="HeroHP1" type="range" min="0" max="50" />-->
+      <p><span class="txt"> Hero MP</span></p>
+      <progress id="HeroMP1" value="0" max="100"></progress>
+        <!-- <input id="HeroMP1" type="range" min="0" max="50" />-->
+      </br>
+          <span id="text"></span>
+        </br>
+        </br>
+        <div id="PasekButton">
+          <button id="ButtonSkill1" type="button">1</button>
+          <button id="ButtonSkill2" type="button">2</button>
+          <button id="ButtonSkill3" type="button">3</button>
+          <button id="ButtonSkill4" type="button">4</button>
+          <button id="ButtonSkill5" type="button">5</button>
+          <button id="ButtonSkill6" type="button">6</button>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="content">
+        <span class="txt" id="text2"> Bla</span>
+      </div>
+  
+     
 
-    <!-- <script src="js/battle.js"></script>  -->
-    <script src="js/Hero.js"></script>
-    
+    </div>
+    </div> 
+
+      <script src="js/battle.js"></script>  
+      <!-- <script src="js/Hero.js"></script>  -->
   </body>
 </html>
 
@@ -31,4 +62,9 @@ function zmiana(){
     text.style.fontSize =input.value+"px";
 }
 input.addEventListener("change", zmiana);
+  niedziałajacy css
+#HeroHP1, #EnemyHP1{
+    background: linear-gradient(to right,#ffb493,#9bff84); 
+    color: orange;
+}
  -->
