--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div class="container">
     <div class="card">
       <div class="content">
-      <button id="Start" type="Start">Start</button>
       <p><span class="txt"> Enemy HP</span></p>
       <progress id="EnemyHP1" value="0" max="100"></progress>
       <!-- <input id="EnemyHP1" type="range" min="0" max="50" />-->
@@ -26,15 +25,16 @@
         <!-- <input id="HeroMP1" type="range" min="0" max="50" />-->
       </br>
           <span id="text"></span>
-        </br>
-        </br>
+        <button id="Start" type="Start">Atak!</button>
+      </br>
+    </br>
         <div id="PasekButton">
-          <button id="ButtonSkill1" type="button">1</button>
-          <button id="ButtonSkill2" type="button">2</button>
-          <button id="ButtonSkill3" type="button">3</button>
-          <button id="ButtonSkill4" type="button">4</button>
-          <button id="ButtonSkill5" type="button">5</button>
-          <button id="ButtonSkill6" type="button">6</button>
+          <button id="ButtonSkill1" type="button">A</button>
+          <button id="ButtonSkill2" type="button">S</button>
+          <button id="ButtonSkill3" type="button">D</button>
+          <button id="ButtonSkill4" type="button">J</button>
+          <button id="ButtonSkill5" type="button">K</button>
+          <button id="ButtonSkill6" type="button">L</button>
         </div>
       </div>
     </div>
