--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
         <button id="ButtonSkill5" class="btn" type="button">K</button>
         <button id="ButtonSkill6" class="btn" type="button">L</button>
       </div>
-    </div>    
+    </div> 
+    <p>A: Atak przebijający: Redukuje pancerz przeciwnika na 1 turę o Esencję. CD:3, koszt:20.</p>
+    <p>S: Osłabienie: Przeciwnik przez 1 turę zadaje mniejsze obrażenia o Esencję. CD:3, koszt:20.</p>
+    <p>D,J - nie zaimplementowane</p> 
+    <p>K: Wzmocnienie 5-Smoków: Zwiększa bazowe obrażenia na 1 turę o Esencję. CD:3, koszt:20. </p>
+    <p>L: Pancerz 5-Smoków: Zwiększa pancerz na 1 turę o Esencja. CD:3, koszt:20.</p>
   </body>
   <script src="js/battle.js"></script>  
   <!-- <script src="js/Hero.js"></script>  -->
