--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="HeroSlot">
           <div class="HeroObrazek">
-            <img src="Zimages/Hero1.jpg" alt=" ">
+            <img src="Zimages/Hero1.JPG" alt=" ">
           </div>
           <div class="HeroStatusy">Statusy</div>
         </div>
