--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/battle.css" />
   </head>
   <body>
-    <ul>
-      <!-- <li><a href="nieistnieje.html">tymczasowy nie działający link</a></li> -->
-    </ul>
     <div class="layout">
       <div class="EnemyContainer">
         <div class="EnemySlot"> 
@@ -44,6 +41,7 @@
           <span id="HeroAtak">0</span>
           <span id="HeroPancerz">0</span>
         </div>
+        <div class="HeroSpacja"></div>
         <button id="Start" class="Start" type="button">Atak!</button>
       </div>
       <!--       -->
@@ -56,11 +54,13 @@
         <button id="ButtonSkill6" class="btn" type="button">L</button>
       </div>
     </div> 
+    <div>
     <p>A: Atak przebijający: Redukuje pancerz przeciwnika na 1 turę o Esencję. CD:3, koszt:20.</p>
     <p>S: Osłabienie: Przeciwnik przez 1 turę zadaje mniejsze obrażenia o Esencję. CD:3, koszt:20.</p>
     <p>D,J - nie zaimplementowane</p> 
     <p>K: Wzmocnienie 5-Smoków: Zwiększa bazowe obrażenia na 1 turę o Esencję. CD:3, koszt:20. </p>
     <p>L: Pancerz 5-Smoków: Zwiększa pancerz na 1 turę o Esencja. CD:3, koszt:20.</p>
+  </div>
   </body>
   <script src="js/battle.js"></script>  
   <!-- <script src="js/Hero.js"></script>  -->
